--- a/Java/廖雪峰Java基础/异常处理&反射&注解.md
+++ b/Java/廖雪峰Java基础/异常处理&反射&注解.md
@@ -620,7 +620,7 @@ invoke方法：
 // InvocationHandler接收三个参数：proxy，代理后的实例对象。 method，对象被调用方法。args，调用时的参数。
 ```
 
-## 注解Annotation
+# 注解Annotation
 
 ### 使用注解
 
