--- a/Java/廖雪峰Java基础/日期与时间.md
+++ b/Java/廖雪峰Java基础/日期与时间.md
@@ -140,3 +140,148 @@ public class forNotes {
 4. 创建`SimpleDateFormat`并设定目标时区；
 5. 格式化获取的`Date`对象（注意`Date`对象无时区信息，时区信息存储在`SimpleDateFormat`中）。
 
+## LocalDateTime
+
+从Java 8开始，`java.time`包提供了新的日期和时间API，主要涉及的类型有：
+
+- 本地日期和时间：`LocalDateTime`，`LocalDate`，`LocalTime`；
+- 带时区的日期和时间：`ZonedDateTime`；
+- 时刻：`Instant`；
+- 时区：`ZoneId`，`ZoneOffset`；
+- 时间间隔：`Duration`。
+
+以及一套新的用于取代`SimpleDateFormat`的格式化类型`DateTimeFormatter`。
+
+### LocalDateTime
+
+我们首先来看最常用的`LocalDateTime`，它表示一个本地日期和时间：
+
+```java
+import java.time.*;
+public class Main{
+    public static void main(String[] args){
+        LocalDate d = LocalDate.now();//当前日期
+        LocalTime t = LocalTime.now();//当前时间
+        LocalDateTime dt = LocalDateTime.now();//当前日期和时间
+        
+    }
+}
+```
+
+上述代码其实有一个小问题，在获取3个类型的时候，由于执行一行代码总会消耗一点时间，因此，3个类型的日期和时间很可能对不上（时间的毫秒数基本上不同）。为了保证获取到同一时刻的日期和时间，可以改写如下：
+
+```java
+LocalDateTime dt = LocalDateTime.now(); // 当前日期和时间
+LocalDate d = dt.toLocalDate(); // 转换到当前日期
+LocalTime t = dt.toLocalTime(); // 转换到当前时间
+```
+
+反过来，通过指定的日期和时间创建`LocalDateTime`可以通过`of()`方法：
+
+```java
+解释// 指定日期和时间:
+LocalDate d2 = LocalDate.of(2019, 11, 30); // 2019-11-30, 注意11=11月
+LocalTime t2 = LocalTime.of(15, 16, 17); // 15:16:17
+LocalDateTime dt2 = LocalDateTime.of(2019, 11, 30, 15, 16, 17);
+LocalDateTime dt3 = LocalDateTime.of(d2, t2);
+```
+
+### DateTimeFormatter
+
+如果要自定义输出的格式，或者要把一个非ISO 8601格式的字符串解析成`LocalDateTime`，可以使用新的`DateTimeFormatter`：
+
+```java
+import java.time.*; 
+import java.time.format.*; 
+public class Main{
+    public static void main(String[] args){
+        //自定义格式化
+        DateTimeFormatter dtf = DateTimeFormatter.ofPattern("yyyy/MM/dd HH:mm:ss");
+        System.out.println(dtf.format(LocalDateTime.now()));
+        
+        //用自定义格式解析
+        LocalDateTime dt2 = LocalDateTime.parse("2019/11/30 15:16:17", dtf);
+        System.out.println(dt2);
+    }
+}
+```
+
+`LocalDateTime`提供了对日期和时间进行加减的非常简单的链式调用：
+
+```java
+import java.time.*;
+public class Main{
+    public static void main(String[] args){
+        LocalDateTime dt = LocalDateTime.of(2019,10,26,20,30,59);
+        System.out.println(dt);
+        //加5天减2小时
+        LocalDateTime dt2 = dt.plusDays(5).minusHours(3);
+        System.out.println(dt2);
+        //减1月
+        LocalDateTime dt3 = dt2.minusMonths(1);
+        System.out.println(dt3);
+    }
+}
+```
+
+注意到月份加减会自动调整日期，例如从`2019-10-31`减去1个月得到的结果是`2019-09-30`，因为9月没有31日。
+
+对日期和时间进行调整则使用`withXxx()`方法，例如：`withHour(15)`会把`10:11:12`变为`15:11:12`：
+
+- 调整年：withYear()
+- 调整月：withMonth()
+- 调整日：withDayOfMonth()
+- 调整时：withHour()
+- 调整分：withMinute()
+- 调整秒：withSecond()
+
+实际上，`LocalDateTime`还有一个通用的`with()`方法允许我们做更复杂的运算。例如：
+
+```java
+import java.time.*;
+import java.time.temporal.TemporalAdjuster;
+import java.time.temporal.*;
+
+public class forNote {
+    public static void main(String[] args) {
+        //本月第一天0:00时刻
+        LocalDateTime firstDay = LocalDate.now().withDayOfMonth(1).atStartOfDay();
+        System.out.println(firstDay);
+
+        //本月最后一天:
+        LocalDate lastDay = LocalDate.now().with(TemporalAdjusters.lastDayOfMonth());
+        System.out.println(lastDay);
+
+        //下月第一天
+        LocalDate nextMonthFirstDay = LocalDate.now().with(TemporalAdjusters.firstDayOfNextMonth());
+        System.out.println(nextMonthFirstDay);
+
+        //本月第一个周一
+        LocalDate firstWeekday = LocalDate.now().with(TemporalAdjusters.firstInMonth(DayOfWeek.MONDAY));
+        System.out.println(firstWeekday);
+    }
+}
+```
+
+注意到`LocalDateTime`无法与时间戳进行转换，因为`LocalDateTime`没有时区，无法确定某一时刻。
+
+### Duration和Period
+
+`Duration`表示两个时刻之间的时间间隔。另一个类似的`Period`表示两个日期之间的天数：
+
+```java
+import java.time.*;
+
+public class forNote {
+    public static void main(String[] args) {
+        LocalDateTime start = LocalDateTime.of(2019, 11, 19, 8, 15, 0);
+        LocalDateTime end = LocalDateTime.of(2020, 1, 9, 19, 25, 30);
+        Duration d = Duration.between(start,end);
+        System.out.println(d);
+
+        Period p = LocalDate.of(2019,11,19).until(LocalDate.of(2020,1,9));
+        System.out.println(p);
+    }
+}
+```
+
