--- a/Java/廖雪峰Java基础/日期与时间.md
+++ b/Java/廖雪峰Java基础/日期与时间.md
@@ -285,3 +285,121 @@ public class forNote {
 }
 ```
 
+## ZonedDateTime
+
+`LocalDateTime`总是表示本地日期和时间，要表示一个带时区的日期和时间，我们就需要`ZonedDateTime`。
+
+可以简单地把`ZonedDateTime`理解成`LocalDateTime`加`ZoneId`。`ZoneId`是`java.time`引入的新的时区类，注意和旧的`java.util.TimeZone`区别。
+
+涉及到时区时，千万不要自己计算时差，否则难以正确处理夏令时。
+
+`ZonedDateTime`仍然提供了`plusDays()`等加减操作。
+
+## DateTimeFormatter
+
+使用旧的`Date`对象时，我们用`SimpleDateFormat`进行格式化显示。使用新的`LocalDateTime`或`ZonedDateTime`时，我们要进行格式化显示，就要使用`DateTimeFormatter`。
+
+和`SimpleDateFormat`不同的是，`DateTimeFormatter`不但是不变对象，它还是线程安全的。线程的概念我们会在后面涉及到。现在我们只需要记住：因为`SimpleDateFormat`不是线程安全的，使用的时候，只能在方法内部创建新的局部变量。而`DateTimeFormatter`可以只创建一个实例，到处引用。
+
+创建`DateTimeFormatter`时，我们仍然通过传入格式化字符串实现：
+
+```java
+DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm");
+```
+
+这种方式可以按照`Locale`默认习惯格式化。
+
+## Instant
+
+Java提供的`System.currentTimeMillis()`返回的就是以毫秒表示的当前时间戳。
+
+这个当前时间戳在`java.time`中以`Instant`类型表示，我们用`Instant.now()`获取当前时间戳，效果和`System.currentTimeMillis()`类似.
+
+对于某一个时间戳，给它关联上指定的`ZoneId`，就得到了`ZonedDateTime`，继而可以获得了对应时区的`LocalDateTime`。
+
+可见，对于某一个时间戳，给它关联上指定的`ZoneId`，就得到了`ZonedDateTime`，继而可以获得了对应时区的`LocalDateTime`。
+
+所以，`LocalDateTime`，`ZoneId`，`Instant`，`ZonedDateTime`和`long`都可以互相转换.
+
+## 最佳实践
+
+### 旧API转新API
+
+如果要把旧式的`Date`或`Calendar`转换为新API对象，可以通过`toInstant()`方法转换为`Instant`对象，再继续转换为`ZonedDateTime`：
+
+```java
+// Date -> Instant:
+Instant ins1 = new Date().toInstant();
+
+// Calendar -> Instant -> ZonedDateTime:
+Calendar calendar = Calendar.getInstance();
+Instant ins2 = calendar.toInstant();
+ZonedDateTime zdt = ins2.atZone(calendar.getTimeZone().toZoneId());
+```
+
+旧的`TimeZone`提供了一个`toZoneId()`，可以把自己变成新的`ZoneId`。
+
+### 新API转旧API
+
+如果要把新的`ZonedDateTime`转换为旧的API对象，只能借助`long`型时间戳做一个“中转”：
+
+```java
+// ZonedDateTime -> long:
+ZonedDateTime zdt = ZonedDateTime.now();
+long ts = zdt.toEpochSecond() * 1000;
+
+// long -> Date:
+Date date = new Date(ts);
+
+// long -> Calendar:
+Calendar calendar = Calendar.getInstance();
+calendar.clear();
+calendar.setTimeZone(TimeZone.getTimeZone(zdt.getZone().getId()));
+calendar.setTimeInMillis(zdt.toEpochSecond() * 1000);
+```
+
+### 在数据库中存储日期和时间
+
+除了旧式的`java.util.Date`，我们还可以找到另一个`java.sql.Date`，它继承自`java.util.Date`，但会自动忽略所有时间相关信息。这个奇葩的设计原因要追溯到数据库的日期与时间类型。
+
+在数据库中，也存在几种日期和时间类型：
+
+- `DATETIME`：表示日期和时间；
+- `DATE`：仅表示日期；
+- `TIME`：仅表示时间；
+- `TIMESTAMP`：和`DATETIME`类似，但是数据库会在创建或者更新记录的时候同时修改`TIMESTAMP`.
+
+在使用Java程序操作数据库时，我们需要把数据库类型与Java类型映射起来。下表是数据库类型与Java新旧API的映射关系：
+
+| 数据库    | 对应Java类（旧）   | 对应Java类（新） |
+| :-------- | :----------------- | :--------------- |
+| DATETIME  | java.util.Date     | LocalDateTime    |
+| DATE      | java.sql.Date      | LocalDate        |
+| TIME      | java.sql.Time      | LocalTime        |
+| TIMESTAMP | java.sql.Timestamp | LocalDateTime    |
+
+实际上，在数据库中，我们需要存储的最常用的是时刻（`Instant`），因为有了时刻信息，就可以根据用户自己选择的时区，显示出正确的本地时间。所以，最好的方法是直接用长整数`long`表示，在数据库中存储为`BIGINT`类型。
+
+在数据库中存储时间戳时，尽量使用`long`型时间戳，它具有省空间，效率高，不依赖数据库的优点。
+
+通过存储一个`long`型时间戳，我们可以编写一个`timestampToString()`的方法，非常简单地为不同用户以不同的偏好来显示不同的本地时间：
+
+```java
+import java.time.*;
+import java.time.format.*;
+import java.util.Locale;
+
+public class forNote {
+    public static void main(String[] args) {
+        long ts = 1574208900000L;
+        System.out.println(timestampToString(ts, Locale.CHINA, "Asia/Shanghai"));
+        System.out.println(timestampToString(ts, Locale.US, "America/New_York"));
+    }
+
+    static String timestampToString(long epochMilli, Locale lo, String zoneId) {
+        Instant ins = Instant.ofEpochMilli(epochMilli);
+        DateTimeFormatter f = DateTimeFormatter.ofLocalizedDateTime(FormatStyle.MEDIUM, FormatStyle.SHORT);
+        return f.withLocale(lo).format(ZonedDateTime.ofInstant(ins, ZoneId.of(zoneId)));
+    }
+}
+```
