--- a/Java/廖雪峰Java基础/异常处理&反射&注解.md
+++ b/Java/廖雪峰Java基础/异常处理&反射&注解.md
@@ -203,11 +203,19 @@ Commons Logging定义了6个日志级别：
 
 默认级别是`INFO`。
 
+使用Commons Logging只需要和两个类打交道，并且只有两步：
+
+第一步，通过`LogFactory`获取`Log`类的实例； 第二步，使用`Log`实例的方法打日志。
+
 ## 使用Log4j
 
 我们在实际使用的时候，并不需要关心Log4j的API，而是通过配置文件来配置它。
 
 以XML配置为例，使用Log4j的时候，我们把一个`log4j2.xml`的文件放到`classpath`下就可以让Log4j读取配置文件并按照我们的配置来输出日志。
+
+### 最佳实践
+
+在开发阶段，始终使用Commons Logging接口来写入日志，并且开发阶段无需引入Log4j。如果需要把日志写入文件， 只需要把正确的配置文件和Log4j相关的jar包放入`classpath`，就可以自动把日志切换成使用Log4j写入，无需修改任何代码。
 
 # 反射
 
