--- a/Java/廖雪峰Java基础/单元测试.md
+++ b/Java/廖雪峰Java基础/单元测试.md
@@ -109,3 +109,111 @@ public class CalculatorTest {
 
 注意到每次运行一个`@Test`方法前，JUnit首先创建一个`XxxTest`实例，因此，每个`@Test`方法内部的成员变量都是独立的，不能也无法把成员变量的状态从一个`@Test`方法带到另一个`@Test`方法。
 
+## 异常测试
+
+JUnit提供`assertThrows()`来期望捕获一个指定的异常。第二个参数`Executable`封装了我们要执行的会产生异常的代码。当我们执行`Factorial.fact(-1)`时，必定抛出`IllegalArgumentException`。`assertThrows()`在捕获到指定异常时表示通过测试，未捕获到异常，或者捕获到的异常类型不对，均表示测试失败。
+
+有些童鞋会觉得编写一个`Executable`的匿名类太繁琐了。实际上，Java 8开始引入了函数式编程，所有单方法接口都可以简写如下：
+
+```java
+@Test
+void testNegative() {
+    assertThrows(IllegalArgumentException.class, () -> {
+        Factorial.fact(-1);
+    });
+}
+```
+
+上述奇怪的`->`语法就是函数式接口的实现代码，我们会在后面详细介绍。现在，我们只需要通过这种固定的代码编写能抛出异常的语句即可。
+
+## 条件测试
+
+在运行测试的时候，有些时候，我们需要排出某些`@Test`方法，不要让它运行，这时，我们就可以给它标记一个`@Disabled`：
+
+```java
+@Disabled
+@Test
+void testBug101() {
+    // 这个测试不会运行
+}
+```
+
+类似`@Disabled`这种注解就称为条件测试，JUnit根据不同的条件注解，决定是否运行当前的`@Test`方法。
+
+`@EnableOnOs`就是一个条件测试判断。
+
+不在Windows平台执行的测试，可以加上`@DisabledOnOs(OS.WINDOWS)`
+
+只能在Java 9或更高版本执行的测试，可以加上`@DisabledOnJre(JRE.JAVA_8)`
+
+## 参数化测试
+
+参数化测试和普通测试稍微不同的地方在于，一个测试方法需要接收至少一个参数，然后，传入一组参数反复运行。
+
+JUnit提供了一个`@ParameterizedTest`注解，用来进行参数化测试。
+
+假设我们自己编写了一个`StringUtils.capitalize()`方法，它会把字符串的第一个字母变为大写，后续字母变为小写：
+
+```java
+public class StringUtils {
+    public static String capitalize(String s) {
+        if (s.length() == 0) {
+            return s;
+        }
+        return Character.toUpperCase(s.charAt(0)) + s.substring(1).toLowerCase();
+    }
+}
+```
+
+现在问题来了：参数如何传入？
+
+最简单的方法是通过`@MethodSource`注解，它允许我们编写一个同名的静态方法来提供测试参数：
+
+```java
+@ParameterizedTest
+@MethodSource
+void testCapitalize(String input, String result) {
+    assertEquals(result, StringUtils.capitalize(input));
+}
+
+static List<Arguments> testCapitalize() {
+    return List.of( // arguments:
+            Arguments.of("abc", "Abc"), //
+            Arguments.of("APPLE", "Apple"), //
+            Arguments.of("gooD", "Good"));
+}
+```
+
+上面的代码很容易理解：静态方法`testCapitalize()`返回了一组测试参数，每个参数都包含两个`String`，正好作为测试方法的两个参数传入。
+
+如果静态方法和测试方法的名称不同，@MethodSource也允许指定方法名。但使用默认同名方法最方便。
+
+另一种传入测试参数的方法是使用`@CsvSource`，它的每一个字符串表示一行，一行包含的若干参数用`,`分隔，因此，上述测试又可以改写如下：
+
+```java
+@ParameterizedTest
+@CsvSource({ "abc, Abc", "APPLE, Apple", "gooD, Good" })
+void testCapitalize(String input, String result) {
+    assertEquals(result, StringUtils.capitalize(input));
+}
+```
+
+如果有成百上千的测试输入，那么，直接写`@CsvSource`就很不方便。这个时候，我们可以把测试数据提到一个独立的CSV文件中，然后标注上`@CsvFileSource`：
+
+```java
+@ParameterizedTest
+@CsvFileSource(resources = { "/test-capitalize.csv" })
+void testCapitalizeUsingCsvFile(String input, String result) {
+    assertEquals(result, StringUtils.capitalize(input));
+}
+```
+
+JUnit只在classpath中查找指定的CSV文件，因此，`test-capitalize.csv`这个文件要放到`test`目录下，内容如下：
+
+```txt
+apple, Apple
+HELLO, Hello
+JUnit, Junit
+reSource, Resource
+```
+
