--- a/Java/廖雪峰Java基础/正则表达式.md
+++ b/Java/廖雪峰Java基础/正则表达式.md
@@ -79,3 +79,26 @@
 
 ## 分组匹配
 
+`(...)`还有一个重要作用，就是分组匹配。
+
+```java
+import java.util.regex.*;
+public class Main {
+    public static void main(String[] args) {
+        Pattern p = Pattern.compile("(\\d{3,4})\\-(\\d{7,8})");
+        Matcher m = p.matcher("010-12345678");
+        if (m.matches()) {
+            String g1 = m.group(1);
+            String g2 = m.group(2);
+            System.out.println(g1);
+            System.out.println(g2);
+        } else {
+            System.out.println("匹配失败!");
+        }
+    }
+}
+```
+
+`Matcher.group(index)`方法的参数用1表示第一个子串，2表示第二个子串。如果我们传入0会得到什么呢？答案是`010-12345678`，即整个正则匹配到的字符串。
+
+反复使用`String.matches()`对同一个正则表达式进行多次匹配效率较低，因为每次都会创建出一样的`Pattern`对象。完全可以先创建出一个`Pattern`对象，然后反复使用，就可以实现编译一次，多次匹配。
